--- a/mpbMassAttacksData.Rmd
+++ b/mpbMassAttacksData.Rmd
@@ -102,11 +102,12 @@ knitr::kable(df_outputs)
 
 # Links to other modules
 
-Part of the Mountain Pine Beetle Red Top Growth Model, which evaluates short-run potential for MPB establishment, eruption, and spread.
+Part of the `LandR_MPB` Mountain Pine Beetle Red Top Model, which evaluates short-run potential for MPB establishment, eruption, and spread.
 
-- `mpbMassAttacksData`
 - `mpbClimateData`
+- `mpbMassAttacksData`
 - `mpbPine`
+- `mpbRedTopSpread`
 - `mpbRedTopSpread`
 
 Future linkages include the `LandR` Biomass suite of modules to simulate/forecast forest vegetation dynamics, and the `fireSense` wildfire simulation model.
